{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 49,
  "lineage": "3a8fa38d-f334-bf85-a3f3-15103909db78",
  "resources": [
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-060e277c0d4cce553",
            "arn": "arn:aws:ec2:ap-southeast-1:891377256846:instance/i-01f438bfd0974148e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "filter": [
              {
                "name": "tag:Created-by",
                "values": [
                  "terraform-jmr"
                ]
              },
              {
                "name": "tag:Name",
                "values": [
                  "ECS-AGENT-RSI"
                ]
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "iam_instance_profile": "ECSInstanceRole",
            "id": "i-01f438bfd0974148e",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "key_name": "provisioner-key.pub",
            "launch_time": "2024-07-19T02:59:26Z",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-0f9c73d61b1987c7d",
            "placement_partition_number": 0,
            "private_dns": "ip-10-0-21-173.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.21.173",
            "public_dns": "ec2-54-169-173-230.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.169.173.230",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0307e6f99aacd515c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0128ddff7378cb2e5",
            "tags": {
              "Created-by": "terraform-jmr",
              "Environment": "develop",
              "Name": "ECS-AGENT-RSI",
              "Release": "latest"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-059962da8d5463b26"
            ]
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377256846:security-group/sg-0e110734af90a7b8f",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "filter": null,
            "id": "sg-0e110734af90a7b8f",
            "name": "dos2u_sg_prod",
            "tags": {
              "Environment": "develop",
              "Name": "crm"
            },
            "timeouts": null,
            "vpc_id": "vpc-0211fa383b4de3a2d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377256846:vpc/vpc-0211fa383b4de3a2d",
            "cidr_block": "10.0.20.0/22",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0348baaad252fc094",
                "cidr_block": "10.0.20.0/22",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-022507b5905e9d963",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Env",
                "values": [
                  "lower"
                ]
              },
              {
                "name": "tag:Name",
                "values": [
                  "lower-rsi-infra"
                ]
              },
              {
                "name": "tag:Provisioner",
                "values": [
                  "terraform"
                ]
              },
              {
                "name": "tag:Tier",
                "values": [
                  "dta"
                ]
              }
            ],
            "id": "vpc-0211fa383b4de3a2d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d49d27f3d663e0e2",
            "owner_id": "891377256846",
            "tags": {
              "Env": "lower",
              "Name": "lower-rsi-infra",
              "Provisioner": "terraform",
              "Tier": "dta"
            }
          }
        }
      ]
    },
    {
      "module": "module.listener-and-routing",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:891377256846:listener/app/ECSALB/e3cd1d76a2941e00/d2195a33681dec56",
            "certificate_arn": "",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:891377256846:targetgroup/ECSTARGETGROUP/6c6435d264929405",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:891377256846:listener/app/ECSALB/e3cd1d76a2941e00/d2195a33681dec56",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:891377256846:loadbalancer/app/ECSALB/e3cd1d76a2941e00",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.this",
            "data.aws_subnets.selected",
            "data.aws_vpc.selected",
            "module.load-balancer.aws_lb.this",
            "module.target-group.aws_lb_target_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:891377256846:loadbalancer/app/ECSALB/e3cd1d76a2941e00",
            "arn_suffix": "app/ECSALB/e3cd1d76a2941e00",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ECSALB-1027007418.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:891377256846:loadbalancer/app/ECSALB/e3cd1d76a2941e00",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ECSALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e110734af90a7b8f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0128ddff7378cb2e5"
              },
              {
                "subnet_id": "subnet-0a7bbb6baa9310b11"
              },
              {
                "subnet_id": "subnet-0fa8e786ac502097d"
              }
            ],
            "subnets": [
              "subnet-0128ddff7378cb2e5",
              "subnet-0a7bbb6baa9310b11",
              "subnet-0fa8e786ac502097d"
            ],
            "tags": {
            },
            "tags_all": {
            },
            "vpc_id": "vpc-0211fa383b4de3a2d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "data.aws_security_group.this",
            "data.aws_subnets.selected"
          ]
        }
      ]
    },
    {
      "module": "module.target-group",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:891377256846:targetgroup/ECSTARGETGROUP/6c6435d264929405",
            "arn_suffix": "targetgroup/ECSTARGETGROUP/6c6435d264929405",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:891377256846:targetgroup/ECSTARGETGROUP/6c6435d264929405",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ECSTARGETGROUP",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0211fa383b4de3a2d"
          },
          "dependencies": [
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.target-group",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:891377256846:targetgroup/ECSTARGETGROUP/6c6435d264929405-20240719053854447300000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:891377256846:targetgroup/ECSTARGETGROUP/6c6435d264929405",
            "target_id": "i-01f438bfd0974148e"
          },
          "dependencies": [
            "data.aws_instance.this",
            "data.aws_vpc.selected",
            "module.target-group.aws_lb_target_group.this"
          ]
        }
      ]
    }
  ]
}